@@ -175,19 +175,16 @@ public final class FilterJerichoHandler implements JerichoHandler {
      */
 
     private final Map<String, Map<String, Set<String>>> htmlMap;
-
     private final Map<String, Set<String>> styleMap;
 
     private final StringBuilder htmlBuilder;
-
     private final StringBuilder attrBuilder;
+    private final StringBuilder urlBuilder;
 
     private final HtmlServiceImpl htmlService;
 
     private boolean body;
-
     private boolean isCss;
-
     private final Stringer cssBuffer;
 
     /**
@@ -200,16 +197,17 @@ public final class FilterJerichoHandler implements JerichoHandler {
      */
     private int depth;
 
+    /**
+     * The max. content size.
+     */
+    private int maxContentSize;
+
+    private boolean maxContentSizeExceeded;
+
     private boolean[] depthInfo;
-
     private boolean dropExternalImages;
-
     private boolean imageURLFound;
-
-    private final StringBuilder urlBuilder;
-
     private boolean replaceUrls = true;
-
     private String cssPrefix;
 
     private final boolean changed = false;
@@ -220,6 +218,8 @@ public final class FilterJerichoHandler implements JerichoHandler {
     public FilterJerichoHandler(final int capacity, final HtmlServiceImpl htmlService) {
         super();
         this.htmlService = htmlService;
+        maxContentSize = -1;
+        maxContentSizeExceeded = false;
         urlBuilder = new StringBuilder(256);
         cssBuffer = new StringBuilderStringer(new StringBuilder(256));
         htmlBuilder = new StringBuilder(capacity);
@@ -237,6 +237,8 @@ public final class FilterJerichoHandler implements JerichoHandler {
     public FilterJerichoHandler(final int capacity, final String mapStr, final HtmlServiceImpl htmlService) {
         super();
         this.htmlService = htmlService;
+        maxContentSize = -1;
+        maxContentSizeExceeded = false;
         urlBuilder = new StringBuilder(256);
         cssBuffer = new StringBuilderStringer(new StringBuilder(256));
         htmlBuilder = new StringBuilder(capacity);
@@ -258,6 +260,18 @@ public final class FilterJerichoHandler implements JerichoHandler {
         }
         htmlMap = Collections.unmodifiableMap(map);
         styleMap = Collections.unmodifiableMap(parseStyleMap(mapStr));
+    }
+
+    /**
+     * Sets the max. content size
+     *
+     * @param maxContentSize The max. content size to set
+     * @return This handler with new behavior applied
+     */
+    public FilterJerichoHandler setMaxContentSize(final int maxContentSize) {
+        this.maxContentSize = maxContentSize;
+        maxContentSizeExceeded = false;
+        return this;
     }
 
     /**
@@ -367,6 +381,17 @@ public final class FilterJerichoHandler implements JerichoHandler {
         System.arraycopy(tmp, 0, depthInfo, 0, tmp.length);
     }
 
+    private boolean checkMaxContentSize(final int addLen) {
+        if (maxContentSize <= 0) {
+            return true;
+        }
+        if (maxContentSizeExceeded) {
+            return false;
+        }
+        maxContentSizeExceeded = htmlBuilder.length() + addLen > maxContentSize;
+        return !maxContentSizeExceeded;
+    }
+
     @Override
     public void handleUnknownTag(final Tag tag) {
         if (!body) {
@@ -377,7 +402,10 @@ public final class FilterJerichoHandler implements JerichoHandler {
     @Override
     public void handleCharacterReference(final CharacterReference characterReference) {
         if (skipLevel == 0) {
-            htmlBuilder.append(CharacterReference.getDecimalCharacterReferenceString(characterReference.getChar()));
+            final String str = CharacterReference.getDecimalCharacterReferenceString(characterReference.getChar());
+            if (checkMaxContentSize(str.length())) {
+                htmlBuilder.append(str);
+            }
         }
     }
 
@@ -385,30 +413,36 @@ public final class FilterJerichoHandler implements JerichoHandler {
     public void handleSegment(final Segment content) {
         if (skipLevel == 0) {
             if (isCss) {
-                /*
-                 * Handle style attribute
-                 */
-                checkCSS(cssBuffer.append(content), styleMap, cssPrefix);
-                String checkedCSS = cssBuffer.toString();
-                cssBuffer.setLength(0);
-                if (dropExternalImages) {
-                    imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, null, false);
-                    // imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, true, false);
-                    checkedCSS = cssBuffer.toString();
-                    cssBuffer.setLength(0);
-                }
-                htmlBuilder.append(checkedCSS);
-            } else {
-                if (content.isWhiteSpace()) {
-                    htmlBuilder.append(content);
-                } else {
-                    /*-
-                     * Should we re-encode prior to appending?
-                     * E.g. "<" ==> "&lt;"
-                     *
-                     * htmlBuilder.append(CharacterReference.reencode(content));
+                if (false == maxContentSizeExceeded) {
+                    /*
+                     * Handle style attribute
                      */
-                    htmlBuilder.append(content);
+                    checkCSS(cssBuffer.append(content), styleMap, cssPrefix);
+                    String checkedCSS = cssBuffer.toString();
+                    cssBuffer.setLength(0);
+                    if (dropExternalImages) {
+                        imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, null, false);
+                        // imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, true, false);
+                        checkedCSS = cssBuffer.toString();
+                        cssBuffer.setLength(0);
+                    }
+                    if (checkMaxContentSize(checkedCSS.length())) {
+                        htmlBuilder.append(checkedCSS);
+                    }
+                }
+            } else {
+                if (checkMaxContentSize(content.length())) {
+                    if (content.isWhiteSpace()) {
+                        htmlBuilder.append(content);
+                    } else {
+                        /*-
+                         * Should we re-encode prior to appending?
+                         * E.g. "<" ==> "&lt;"
+                         *
+                         * htmlBuilder.append(CharacterReference.reencode(content));
+                         */
+                        htmlBuilder.append(content);
+                    }
                 }
             }
         }
@@ -435,6 +469,10 @@ public final class FilterJerichoHandler implements JerichoHandler {
 
     @Override
     public void handleStartTag(final StartTag startTag) {
+        if (maxContentSizeExceeded) {
+            // Do not append more elements
+            return;
+        }
         final String tagName = startTag.getName();
         if (startTag.isEndTagForbidden() || SINGLE_TAGS.contains(tagName)) {
             // Simple tag
@@ -472,7 +510,11 @@ public final class FilterJerichoHandler implements JerichoHandler {
                     /*
                      * Just remove tag definition: "<tag>text<subtag>text</subtag></tag>" would be "text<subtag>text</subtag>"
                      */
-                    mark();
+                    if (startTag.isSyntacticalEmptyElementTag()) {
+                        // Swallow
+                    } else {
+                        mark();
+                    }
                 } else if (isRemoveWholeTag(startTag)) {
                     /*
                      * Remove whole tag incl. subsequent content and tags
@@ -482,7 +524,11 @@ public final class FilterJerichoHandler implements JerichoHandler {
                     /*
                      * Just remove tag definition: "<tag>text<subtag>text</subtag></tag>" would be "text<subtag>text</subtag>"
                      */
-                    mark();
+                    if (startTag.isSyntacticalEmptyElementTag()) {
+                        // Swallow
+                    } else {
+                        mark();
+                    }
                 }
             }
         }
@@ -736,10 +782,36 @@ public final class FilterJerichoHandler implements JerichoHandler {
     public void handleCData(final String cdata) {
         if (skipLevel == 0) {
             if (isCss) {
-                /*
-                 * Handle style attribute
-                 */
-                checkCSS(cssBuffer.append(cdata), styleMap, cssPrefix);
+                if (false == maxContentSizeExceeded) {
+                    /*
+                     * Handle style attribute
+                     */
+                    checkCSS(cssBuffer.append(cdata), styleMap, cssPrefix);
+                    String checkedCSS = cssBuffer.toString();
+                    cssBuffer.setLength(0);
+                    if (dropExternalImages) {
+                        imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, null, false);
+                        // imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, true, false);
+                        checkedCSS = cssBuffer.toString();
+                        cssBuffer.setLength(0);
+                    }
+                    if (checkMaxContentSize(checkedCSS.length())) {
+                        htmlBuilder.append(checkedCSS);
+                    }
+                }
+            } else {
+                if (checkMaxContentSize(cdata.length())) {
+                    htmlBuilder.append(cdata);
+                }
+            }
+        }
+    }
+
+    @Override
+    public void handleComment(final String comment) {
+        if (isCss) {
+            if (false == maxContentSizeExceeded) {
+                checkCSS(cssBuffer.append(comment), styleMap, cssPrefix);
                 String checkedCSS = cssBuffer.toString();
                 cssBuffer.setLength(0);
                 if (dropExternalImages) {
@@ -748,28 +820,14 @@ public final class FilterJerichoHandler implements JerichoHandler {
                     checkedCSS = cssBuffer.toString();
                     cssBuffer.setLength(0);
                 }
-                htmlBuilder.append(checkedCSS);
-            } else {
-                htmlBuilder.append(cdata);
+                if (checkMaxContentSize(checkedCSS.length())) {
+                    htmlBuilder.append(checkedCSS);
+                }
             }
-        }
-    }
-
-    @Override
-    public void handleComment(final String comment) {
-        if (isCss) {
-            checkCSS(cssBuffer.append(comment), styleMap, cssPrefix);
-            String checkedCSS = cssBuffer.toString();
-            cssBuffer.setLength(0);
-            if (dropExternalImages) {
-                imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, null, false);
-                // imageURLFound |= checkCSS(cssBuffer.append(checkedCSS), IMAGE_STYLE_MAP, true, false);
-                checkedCSS = cssBuffer.toString();
-                cssBuffer.setLength(0);
-            }
-            htmlBuilder.append(checkedCSS);
         } else {
-            htmlBuilder.append(comment);
+            if (checkMaxContentSize(comment.length())) {
+                htmlBuilder.append(comment);
+            }
         }
     }
 
