@@ -1,3 +1,7 @@
+* 2014-02-26 - thorben.betten@open-xchange.com
+
+ - Fix for bug 31316: Check for a syntactically empty-element tag prior to marking it
+
 * 2014-02-25 - marc.arens@open-xchange.com
 
  - Fix for bug 31300: Retrieve client state after blocking cleanup of local member
